# everybody-codes

./: .env.example  .pre-commit-config.yaml  LICENSE  pyproject.toml
src/everybody_codes/: __init__.py  cli.py
src/everybody_codes/2025/quest4/part1/: full.txt  solve.py
src/everybody_codes/2025/quest4/part2/: full.txt  solve.py
src/everybody_codes/2025/quest4/part3/: full.txt  solve.py
src/everybody_codes/2025/quest5/part1/: full.txt  solve.py
src/everybody_codes/2025/quest5/part2/: full.txt  solve.py
src/everybody_codes/2025/quest5/part3/: full.txt  solve.py
