[project]
name = "everybody-codes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "LeoPedri", email = "leonardopedri1.0@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
